轮播图的完成

--- a/src/app.json
+++ b/src/app.json
@@ -1,11 +1,13 @@
 {
   "pages": [
     "pages/index/main",
-    "pages/logs/main"  ],
+    "pages/logs/main",
+    "pages/search/main"
+   ],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
+    "navigationBarTitleText": "黑马优购",
     "navigationBarTextStyle": "black"
   },
   "tabBar": {
